// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`도구 스키마 스냅샷 > xbrush_chat 1`] = `
{
  "$schema": "http://json-schema.org/draft-07/schema#",
  "additionalProperties": false,
  "properties": {
    "frequency_penalty": {
      "description": "Penalize frequent tokens (-2 to 2).",
      "maximum": 2,
      "minimum": -2,
      "type": "number",
    },
    "max_tokens": {
      "description": "Upper bound on generated tokens (1-65536), reasoning included. Keep modest — the response must finish within the ~30s gateway limit.",
      "maximum": 65536,
      "minimum": 1,
      "type": "integer",
    },
    "messages": {
      "description": "Conversation so far, oldest first (1-1000 messages). The completion answers the last user message.",
      "items": {
        "additionalProperties": false,
        "properties": {
          "content": {
            "anyOf": [
              {
                "anyOf": [
                  {
                    "description": "Plain message text (up to 1,000,000 characters). Must be non-empty except on assistant messages that carry tool_calls.",
                    "maxLength": 1000000,
                    "type": "string",
                  },
                  {
                    "description": "Multimodal parts: {type:'text', text} and/or {type:'image_url', image_url:{url, detail?}}. Image parts require a vision-capable model (constraints.vision in xbrush_list_models, e.g. bytedance/seed-2.0-mini, max images per request in constraints.maxImages).",
                    "items": {
                      "anyOf": [
                        {
                          "additionalProperties": false,
                          "properties": {
                            "text": {
                              "description": "Text content (non-empty, up to 1,000,000 characters).",
                              "maxLength": 1000000,
                              "minLength": 1,
                              "type": "string",
                            },
                            "type": {
                              "const": "text",
                              "type": "string",
                            },
                          },
                          "required": [
                            "type",
                            "text",
                          ],
                          "type": "object",
                        },
                        {
                          "additionalProperties": false,
                          "properties": {
                            "image_url": {
                              "additionalProperties": false,
                              "properties": {
                                "detail": {
                                  "description": "Vision fidelity vs. cost, passed through to the model vendor: 'low', 'high', or 'auto'. 'low' is drastically cheaper (~98 prompt tokens vs ~1,400 per image on seed-2.0-mini); omitted = vendor default (high-tier cost).",
                                  "type": "string",
                                },
                                "url": {
                                  "description": "Image as an https URL or a data: URL (base64). Minimum dimension 14px. Upload local files first with xbrush_file_upload and pass the CDN URL.",
                                  "minLength": 1,
                                  "type": "string",
                                },
                              },
                              "required": [
                                "url",
                              ],
                              "type": "object",
                            },
                            "type": {
                              "const": "image_url",
                              "type": "string",
                            },
                          },
                          "required": [
                            "type",
                            "image_url",
                          ],
                          "type": "object",
                        },
                      ],
                    },
                    "minItems": 1,
                    "type": "array",
                  },
                ],
              },
              {
                "type": "null",
              },
            ],
            "description": "Message content: a plain string, or an array of text/image_url parts (vision). Required (non-empty) on every message except an assistant message with tool_calls, where it may be empty, null, or omitted. For role:'tool' put the function's result here (commonly a JSON string).",
          },
          "role": {
            "description": "Message author: system (instructions), user, assistant (prior model turns), or tool (a function result answering an assistant tool_call).",
            "enum": [
              "system",
              "user",
              "assistant",
              "tool",
            ],
            "type": "string",
          },
          "tool_call_id": {
            "description": "Tool messages only (required there): the id of the assistant tool_calls entry this message answers.",
            "minLength": 1,
            "type": "string",
          },
          "tool_calls": {
            "description": "Assistant messages only: the tool_calls array from a prior response, echoed back VERBATIM when returning function results.",
            "items": {
              "additionalProperties": false,
              "properties": {
                "function": {
                  "additionalProperties": false,
                  "properties": {
                    "arguments": {
                      "description": "JSON-encoded arguments STRING (not an object), echoed back verbatim.",
                      "type": "string",
                    },
                    "name": {
                      "description": "Function name as returned by the model.",
                      "minLength": 1,
                      "type": "string",
                    },
                  },
                  "required": [
                    "name",
                    "arguments",
                  ],
                  "type": "object",
                },
                "id": {
                  "description": "Tool call id exactly as the model returned it (e.g. call_abc123).",
                  "minLength": 1,
                  "type": "string",
                },
                "type": {
                  "const": "function",
                  "type": "string",
                },
              },
              "required": [
                "id",
                "type",
                "function",
              ],
              "type": "object",
            },
            "minItems": 1,
            "type": "array",
          },
        },
        "required": [
          "role",
        ],
        "type": "object",
      },
      "maxItems": 1000,
      "minItems": 1,
      "type": "array",
    },
    "model": {
      "description": "LLM model ID (e.g. z-ai/glm-5.2, bytedance/seed-2.0-mini). Use xbrush_list_models with category='text' to see options, per-token pricing, and vision support.",
      "type": "string",
    },
    "presence_penalty": {
      "description": "Penalize tokens already present (-2 to 2).",
      "maximum": 2,
      "minimum": -2,
      "type": "number",
    },
    "reasoning_effort": {
      "description": "Reasoning budget for reasoning-capable models. Server default: none (fastest). Higher efforts can exceed the ~30s gateway limit — prefer none/minimal here.",
      "enum": [
        "none",
        "minimal",
        "high",
        "max",
      ],
      "type": "string",
    },
    "stop": {
      "anyOf": [
        {
          "description": "A single stop sequence (non-empty).",
          "minLength": 1,
          "type": "string",
        },
        {
          "description": "1-4 stop sequences (non-empty strings).",
          "items": {
            "minLength": 1,
            "type": "string",
          },
          "maxItems": 4,
          "minItems": 1,
          "type": "array",
        },
      ],
      "description": "Stop sequence(s): generation halts before emitting any of these. A non-empty string or an array of 1-4.",
    },
    "temperature": {
      "description": "Sampling temperature (0-2). Higher = more random.",
      "maximum": 2,
      "minimum": 0,
      "type": "number",
    },
    "tool_choice": {
      "anyOf": [
        {
          "description": "'auto' (default — model decides), 'none' (suppress calls this turn), or 'required' (must call something; may yield an empty tool_calls response if no tool fits — prefer 'auto').",
          "minLength": 1,
          "type": "string",
        },
        {
          "additionalProperties": false,
          "description": "Force one specific function. Only models with constraints.forcedChoiceHonored obey this (bytedance/seed-2.0-mini yes; z-ai/glm-5.2 picks its own tool and the response carries a PARAM_NOT_HONORED warning).",
          "properties": {
            "function": {
              "additionalProperties": false,
              "properties": {
                "name": {
                  "minLength": 1,
                  "type": "string",
                },
              },
              "required": [
                "name",
              ],
              "type": "object",
            },
            "type": {
              "const": "function",
              "type": "string",
            },
          },
          "required": [
            "type",
            "function",
          ],
          "type": "object",
        },
      ],
      "description": "How the model may use \`tools\`: 'auto' (default), 'none', 'required', or {type:'function', function:{name}} to force one function (models with constraints.forcedChoiceHonored only — glm-5.2 ignores it with a PARAM_NOT_HONORED warning).",
    },
    "tools": {
      "description": "Function definitions the model may call (OpenAI format; ≤32 functions, ≤32KB serialized). Works on models with constraints.functionCalling in xbrush_list_models. Tool schemas are billed as input tokens on EVERY request plus a fixed per-model overhead (constraints.toolsFixedTokens) — omit on requests that don't need them.",
      "items": {
        "additionalProperties": false,
        "properties": {
          "function": {
            "additionalProperties": false,
            "properties": {
              "description": {
                "description": "What the function does — helps the model decide when to call it.",
                "type": "string",
              },
              "name": {
                "description": "Function name: 1-64 chars of letters, digits, _ or - (server-enforced).",
                "pattern": "^[a-zA-Z0-9_-]{1,64}$",
                "type": "string",
              },
              "parameters": {
                "additionalProperties": {},
                "description": "JSON Schema object describing the function's arguments (OpenAI format). Omit for a no-argument function.",
                "type": "object",
              },
            },
            "required": [
              "name",
            ],
            "type": "object",
          },
          "type": {
            "const": "function",
            "type": "string",
          },
        },
        "required": [
          "type",
          "function",
        ],
        "type": "object",
      },
      "maxItems": 32,
      "type": "array",
    },
    "top_p": {
      "description": "Nucleus sampling probability mass (0-1).",
      "maximum": 1,
      "minimum": 0,
      "type": "number",
    },
  },
  "required": [
    "model",
    "messages",
  ],
  "type": "object",
}
`;

exports[`도구 스키마 스냅샷 > xbrush_file_upload 1`] = `
{
  "$schema": "http://json-schema.org/draft-07/schema#",
  "additionalProperties": false,
  "properties": {
    "file_path": {
      "description": "Absolute path to the local file to upload.",
      "type": "string",
    },
    "strategy": {
      "description": "Upload strategy: 'auto' (default) picks by file size; 'direct' uses /v1/files/upload; 'presign' uses /v1/files/presign + S3.",
      "enum": [
        "auto",
        "direct",
        "presign",
      ],
      "type": "string",
    },
  },
  "required": [
    "file_path",
  ],
  "type": "object",
}
`;

exports[`도구 스키마 스냅샷 > xbrush_get_request 1`] = `
{
  "$schema": "http://json-schema.org/draft-07/schema#",
  "additionalProperties": false,
  "properties": {
    "request_id": {
      "description": "Request ID (starts with 'req', 24 characters).",
      "minLength": 24,
      "type": "string",
    },
  },
  "required": [
    "request_id",
  ],
  "type": "object",
}
`;

exports[`도구 스키마 스냅샷 > xbrush_image_edit 1`] = `
{
  "$schema": "http://json-schema.org/draft-07/schema#",
  "additionalProperties": false,
  "properties": {
    "aspect_ratio": {
      "description": "Aspect ratio for resolution-based edit models (e.g. "16:9"). gpt-image-2-edit supports 1:1, 3:2, 2:3, 4:3, 3:4, 4:5, 16:9, 9:16, 21:9, 1.91:1 at 1K/2K — at 4K only 16:9, 9:16, 21:9, 1.91:1. Special value "custom" makes gpt-image-2-edit use width×height as the exact output size (both required, each a multiple of 16, longest edge ≤3840, total pixels 655,360–8,294,400). seedream-*-edit / nano-banana-*-edit accept their own sets; an unsupported value is rejected with the list of allowed ratios.",
      "minLength": 1,
      "type": "string",
    },
    "height": {
      "description": "Output height in pixels (256-4096) for megapixel-based models; for outpaint models, the target canvas height. Resolution-based edit models ignore it unless aspect_ratio:"custom" (see width).",
      "maximum": 4096,
      "minimum": 256,
      "type": "integer",
    },
    "image_url": {
      "description": "URL of the primary source image to edit (also the first reference).",
      "format": "uri",
      "type": "string",
    },
    "image_urls": {
      "description": "Additional reference image URLs for models that compose from multiple references (e.g. gpt-image-2-edit, nano-banana-edit). Appended after image_url, so the model receives [image_url, ...image_urls]. Omit for single-reference edits.",
      "items": {
        "format": "uri",
        "type": "string",
      },
      "maxItems": 15,
      "minItems": 1,
      "type": "array",
    },
    "mask_url": {
      "description": "Mask image URL. White areas = edit, black areas = preserve.",
      "format": "uri",
      "type": "string",
    },
    "mode": {
      "description": "Optional hint ('inpaint'/'outpaint'). The selected model ultimately determines the operation — pick an outpaint model to outpaint.",
      "enum": [
        "inpaint",
        "outpaint",
      ],
      "type": "string",
    },
    "model": {
      "description": "Editing model. Inpaint/instruct-edit: qwen-image-edit, nano-banana-edit, seedream-5.0-pro-edit, flux.2-pro-edit. Outpaint: flux-outpaint, qwen-outpaint. Use xbrush_list_models(category='image').",
      "type": "string",
    },
    "n": {
      "description": "Number of edited images (1-8). Default: 1.",
      "maximum": 8,
      "minimum": 1,
      "type": "integer",
    },
    "prompt": {
      "description": "Text instruction describing the desired edits.",
      "minLength": 1,
      "type": "string",
    },
    "quality": {
      "description": "Output quality tier. Applies to byResolutionAndQuality models (gpt-image-2-edit); higher = better and more expensive. Server default is high if omitted.",
      "enum": [
        "low",
        "medium",
        "high",
      ],
      "type": "string",
    },
    "resolution": {
      "description": "Output resolution tier for resolution-based edit models (gpt-image-2-edit, seedream-*-edit, nano-banana-pro/2-edit). Examples: "1K", "2K", "4K".",
      "minLength": 1,
      "type": "string",
    },
    "seed": {
      "description": "Random seed for reproducible results.",
      "type": "integer",
    },
    "width": {
      "description": "Output width in pixels (256-4096) for megapixel-based models; for outpaint models, the target canvas width. Resolution-based edit models normally ignore it — but with aspect_ratio:"custom", gpt-image-2-edit outputs exactly width×height (both required).",
      "maximum": 4096,
      "minimum": 256,
      "type": "integer",
    },
  },
  "required": [
    "model",
    "prompt",
    "image_url",
  ],
  "type": "object",
}
`;

exports[`도구 스키마 스냅샷 > xbrush_image_generate 1`] = `
{
  "$schema": "http://json-schema.org/draft-07/schema#",
  "additionalProperties": false,
  "properties": {
    "aspect_ratio": {
      "description": "Aspect ratio for resolution-based models (e.g. "16:9"). gpt-image-2/-edit support 1:1, 3:2, 2:3, 4:3, 3:4, 4:5, 16:9, 9:16, 21:9, 1.91:1 at 1K/2K — at 4K only 16:9, 9:16, 21:9, 1.91:1. Special value "custom" makes gpt-image-2/-edit use width×height as the exact output size (both required, each a multiple of 16, longest edge ≤3840, total pixels 655,360–8,294,400; missing dimensions or out-of-range values return 400). seedream-* / nano-banana-* accept their own sets; an unsupported value is rejected with the list of allowed ratios.",
      "minLength": 1,
      "type": "string",
    },
    "height": {
      "description": "Output height in pixels (256-4096) for megapixel-based models. Default: 1024. Resolution-based models ignore it unless aspect_ratio:"custom" (see width).",
      "maximum": 4096,
      "minimum": 256,
      "type": "integer",
    },
    "model": {
      "description": "Image model to use (e.g. z-image-turbo, flux.2-pro, seedream-5.0-pro, nano-banana-pro). Use xbrush_list_models to see available models.",
      "type": "string",
    },
    "n": {
      "description": "Number of images to generate (1-8). Default: 1.",
      "maximum": 8,
      "minimum": 1,
      "type": "integer",
    },
    "negative_prompt": {
      "description": "Elements to exclude from the generated image.",
      "type": "string",
    },
    "prompt": {
      "description": "Text description of the image to generate.",
      "minLength": 1,
      "type": "string",
    },
    "quality": {
      "description": "Output quality tier. Applies to byResolutionAndQuality models (gpt-image-2/-edit); higher = better and more expensive. Server default is high if omitted.",
      "enum": [
        "low",
        "medium",
        "high",
      ],
      "type": "string",
    },
    "resolution": {
      "description": "Output resolution tier for resolution-based models (gpt-image-2, seedream-*, nano-banana-pro/2). Examples: "1K", "2K", "4K". Ignored by megapixel-based models — use width/height for those.",
      "minLength": 1,
      "type": "string",
    },
    "seed": {
      "description": "Random seed for reproducible results.",
      "type": "integer",
    },
    "width": {
      "description": "Output width in pixels (256-4096) for megapixel-based models (flux.*, z-image-turbo, etc.). Default: 1024. Resolution-based models (gpt-image-2, seedream-*, nano-banana-*) normally ignore it — but with aspect_ratio:"custom", gpt-image-2/-edit output exactly width×height (both required).",
      "maximum": 4096,
      "minimum": 256,
      "type": "integer",
    },
  },
  "required": [
    "model",
    "prompt",
  ],
  "type": "object",
}
`;

exports[`도구 스키마 스냅샷 > xbrush_list_models 1`] = `
{
  "$schema": "http://json-schema.org/draft-07/schema#",
  "additionalProperties": false,
  "properties": {
    "category": {
      "description": "Filter by top-level category: image, video, audio, text (chat LLMs), or utility. Omit to list all.",
      "enum": [
        "image",
        "video",
        "audio",
        "text",
        "utility",
      ],
      "type": "string",
    },
  },
  "type": "object",
}
`;

exports[`도구 스키마 스냅샷 > xbrush_music_generate 1`] = `
{
  "$schema": "http://json-schema.org/draft-07/schema#",
  "additionalProperties": false,
  "properties": {
    "duration": {
      "description": "Duration in seconds (1-120). Conservative upper bound; may be lifted by server.",
      "maximum": 120,
      "minimum": 1,
      "type": "integer",
    },
    "model": {
      "description": "Music model ID (e.g. lyria2, lyria3, lyria3-pro). Optional — server picks a default.",
      "type": "string",
    },
    "negative_prompt": {
      "description": "Styles/elements to exclude from the generated music.",
      "type": "string",
    },
    "prompt": {
      "description": "Text description of the music to generate.",
      "minLength": 1,
      "type": "string",
    },
    "seed": {
      "description": "Random seed for reproducibility.",
      "type": "integer",
    },
  },
  "required": [
    "prompt",
  ],
  "type": "object",
}
`;

exports[`도구 스키마 스냅샷 > xbrush_tts_generate 1`] = `
{
  "$schema": "http://json-schema.org/draft-07/schema#",
  "additionalProperties": false,
  "properties": {
    "language": {
      "description": "Language/locale code (e.g. 'ko', 'en', 'ko-KR').",
      "type": "string",
    },
    "model": {
      "description": "TTS model ID (e.g. eleven-v3, speech-2.8-hd). Optional — server default is a Minimax model (which needs voice_id). Use xbrush_list_models with category='audio'.",
      "type": "string",
    },
    "speed": {
      "description": "Speech rate multiplier (0.5-2.0). Default: 1.0.",
      "maximum": 2,
      "minimum": 0.5,
      "type": "number",
    },
    "text": {
      "description": "Text to synthesize (non-blank).",
      "minLength": 1,
      "type": "string",
    },
    "voice_id": {
      "description": "Voice identifier. REQUIRED for Minimax models (speech-*); get one from xbrush_list_voices. ElevenLabs (eleven-v3) works without it.",
      "type": "string",
    },
  },
  "required": [
    "text",
  ],
  "type": "object",
}
`;

exports[`도구 스키마 스냅샷 > xbrush_video_lip_sync 1`] = `
{
  "$schema": "http://json-schema.org/draft-07/schema#",
  "additionalProperties": false,
  "properties": {
    "audio_url": {
      "description": "URL of the speech audio to lip-sync. Alternative: text + voice_id (built-in TTS).",
      "format": "uri",
      "type": "string",
    },
    "duration": {
      "description": "Output duration in seconds (1-60). Model default if omitted.",
      "maximum": 60,
      "minimum": 1,
      "type": "number",
    },
    "image_url": {
      "description": "URL of a still portrait photo to animate — talking photo (fabric-1.0/-fast). Provide video_url OR image_url.",
      "format": "uri",
      "type": "string",
    },
    "model": {
      "description": "Lip-sync model ID: pixverse-lipsync / infinite-talk (video input), fabric-1.0 / fabric-1.0-fast (still-photo input, 'talking photo'). Defaults to the server's default model.",
      "type": "string",
    },
    "resolution": {
      "description": "Output resolution tier — currently "480p" or "720p" (higher costs more; e.g. fabric-1.0 480p 0.104 vs 720p 0.195 credits/sec). Server-validated.",
      "minLength": 1,
      "type": "string",
    },
    "text": {
      "description": "Text to speak via built-in TTS instead of audio_url (use with voice_id; see xbrush_list_voices).",
      "type": "string",
    },
    "video_url": {
      "description": "URL of the source face video (video-driven models). Provide video_url OR image_url.",
      "format": "uri",
      "type": "string",
    },
    "voice_id": {
      "description": "Voice for built-in TTS when using text (from xbrush_list_voices).",
      "type": "string",
    },
  },
  "type": "object",
}
`;

exports[`도구 스키마 스냅샷 > xbrush_watermark_add 1`] = `
{
  "properties": {},
  "type": "object",
}
`;
